# TranslateBar

./: .gitignore  CMakeLists.txt  LanguagesListModel.qml  Main.qml  README.md  inputvalidator.cpp  inputvalidator.h  languageguesser.cpp  languageguesser.h  main.cpp  networkmodule.cpp  networkmodule.h  qml.qrc  settingsmanager.cpp  settingsmanager.h  translater.cpp  translater.h
